--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-Go to <a href="crea.tion.to" >crea.tion.to</a>
+Go to <a href="http://crea.tion.to" >crea.tion.to</a>
 
 </body>
 
